Translated examples of IntrinicExtrinsicCalib

--- a/IntrinsicExtrinsicCalib/sample/configExtrinsic.cfg
+++ b/IntrinsicExtrinsicCalib/sample/configExtrinsic.cfg
@@ -1,20 +1,26 @@
-// Pfad zur XML-Datei
+// Path to your XML-File. It contains the paths to your images for the calibration.
 imagesXml = "../sample/imagesExtrinsic.xml";
 
-// Schachbrettbreite
+// Width of the calibration chessboard.
 chessboardWidth = 18;
 
-// Schachbretthöhe
+// Height of the calibration chessboard.
 chessboardHeight = 12;
 
-// Gibt die Pixelfläche in x und y an um die Schachbrettkanten besser zu finden
+// Pixel area in x and y to improve the position of the chessboard corners.
 subPixSize = 11;
 
-// Gibt den Pfad an wo die Kalibrierung gespeichert werden soll.
+// Path to save the calibration results. The folder will automatically be created.
 savePath = "./bothExtrinsic/";
 
+// File from the intrinsics calibration of the first camera. (E.g. left camera)
 ymlIntrinsic1 = "./intrinsicLeft/intrinsic.yml";
 
+// File from the intrinsics calibration of the first camera. (E.g. left camera)
 ymlIntrinsic2 = "./intrinsicRight/intrinsic.yml";
 
+// Size of one square of the chessboard. You can choose a measuring unit you want. 
+// E.g. meters, centimeter... 
+// The extrinsic matrix use the same measuring unit for the translation.
+// It has no effect of the accuracy.
 squareSize = 5.0;
