--- a/IntrinsicExtrinsicCalib/sample/configIntrinsicRight.cfg
+++ b/IntrinsicExtrinsicCalib/sample/configIntrinsicRight.cfg
@@ -1,22 +1,25 @@
-// Pfad zur XML-Datei
+// Path to your XML-File. It contains the paths to your images for the calibration.
 imagesXml = "../sample/imagesRightIntrinsic.xml";
-//fileXml = "camera_calib_20131125_18x12_12mp-w-right.xml"
 
-// Schachbrettbreite
+// Width of the calibration chessboard.
 chessboardWidth = 18;
 
-// Schachbretthöhe
+// Height of the calibration chessboard.
 chessboardHeight = 12;
 
-// Gibt die Pixelfläche in x und y an um die Schachbrettkanten besser zu finden
+// Pixel area in x and y to improve the position of the chessboard corners.
 subPixSize = 11;
 
-// Gibt den Pfad an wo die Kalibrierung gespeichert werden soll.
+// Path to save the calibration results. The folder will automatically be created.
 savePath = "./intrinsicRight/";
 
+// If parameter is set, the programm will determine the best camera calibration parameters for your camera.
+// If you know your camera parameter you can set this parameter 'false' and set the calibration parameters below. 
+// If you set it 'true' the calibration parameters below will be ignored.
 autoCalibrate = TRUE;
 
-// Kamerakalibrierungsparameter
+// Calibration parameters. Please check out the OpenCV-Docs for the meaning of the Parameter.
+// http://docs.opencv.org/modules/calib3d/doc/camera_calibration_and_3d_reconstruction.html#calibratecamera
 FIX_PRINCIPAL_POINT = FALSE;
 FIX_ASPECT_RATIO = FALSE;
 ZERO_TANGENT_DIST = FALSE;
