Translated examples of ImageRectify

--- a/ImageRectify/sample/config.cfg
+++ b/ImageRectify/sample/config.cfg
@@ -1,11 +1,17 @@
-// Pfad zur XML-Datei
-imagesXml = "./sample/images.xml"
+// Path to your XML-File. It contains the paths to your images.
+imagesXml = "../sample/images.xml"
 
-// Gibt den Pfad an wo die Kalibrierung gespeichert werden soll.
+// Path to save the results. The folder will automatically be created.
 savePath = "./rectified/"
 
-ymlIntrinsic1 = "./sample/GoPro_left_intrinsics.yml"
+// ATTENTION! 
+// Hint: The images at the "images.xml" must be in the same chronological order as the camera intrinsics!
 
-ymlIntrinsic2 = "./sample/GoPro_right_intrinsics.yml"
+// Path to the intrinsics for the first camera. E.g.: left camera
+ymlIntrinsic1 = "../sample/GoPro_left_intrinsics.yml"
 
-ymlExtrinsics = "./sample/extrinsics.yml"
+// Path to the intrinsics for the first camera. E.g.: right camera
+ymlIntrinsic2 = "../sample/GoPro_right_intrinsics.yml"
+
+// Path to the extrinsic calibration for both cameras.
+ymlExtrinsics = "../sample/extrinsics.yml"
