edit config of ADCensus

--- a/ADCensusBM/sample/config.cfg
+++ b/ADCensusBM/sample/config.cfg
@@ -1,51 +1,56 @@
-// Minimale und maximale disparität
+// Hint: The values in these config are for the middleburry imageset. 
+// The values also work with other images but specific values for your own dataset can improve the quality.
+
+// Minimum and maximum disparity
 dMin=0;
 dMax=60;
 
-// Enthält alle Bilder, die verwendet werden sollen. Die linken und rechten Aufnahmen immer im Wechsel.
-// Beginnend mit einer linken Aufnahme.
+// Path to your XML-File. The images must be rectified!
 xmlImages="images.xml";
 
-// Enthält die extrinsischen Parameter der beiden Kameras.
+// Contains the extrinsic parameters of the two cameras.
+// The program creates a point cloud if you have a extrinsic calibration file for your images. 
+// Otherwise create an empty file and set this in the config as you can see in the sample folder. 
+// If no extrinsic exists only the depth maps will be created.
 ymlExtrinsic="../sample/extrinsics.yml";
 
-// Parameter für die Kosten-Initialisierung mit AD-Census
+// Parameters for the cost-initialization for the ADCensus
 censusWinH=9;
 censusWinW=7;
 defaultBorderCost=0.999;
 lambdaAD=10.0;
 lambdaCensus=30.0;
 
-// Der Pfad in die die Ergebnisse und Zwischenergebnisse abgelegt werden.
-savePath="ergebnisse/";
+// The path where the results and intermediate results are stored.
+savePath="results/";
 
-// Parameter für die kreuz-basierte Aggregierung der Kosten
+// Parameters for the cross-based cost aggregation
 aggregatingIterations=4;
 colorThreshold1=20;
 colorThreshold2=6;
 maxLength1=34;
 maxLength2=17;
 
-// Parameter für die Bildzellenoptimierung
+// Parameters for the optimization of image cells
 colorDifference=15;
 pi1=0.1;
 pi2=0.3;
 
-// Parameter für die Ausreißererkennung
+// Parameters for outlier detection
 dispTolerance=0;
 
-// Parameter für die iterative Bereichswertung
+// Parameters for the iterative range rating
 votingThreshold=20;
 votingRatioThreshold=0.4;
 
-// Parameter für die geeignete Interpolierung
+// Parameters for the proper interpolation
 maxSearchDepth=20;
 
-// Parameter für die Angleichung der Tiefenunstetigkeiten
+// Parameters for the approximation of depths discontinuities 
 cannyThreshold1=20;
 cannyThreshold2=60;
 cannyKernelSize=3;
 
-// Parameter für die Sub-Pixel Verbesserung
+// Parameters for the sub-pixel enhancement
 blurKernelSize=3;
 
