Updated samles at evalDisp

--- a/evalDisp/sample/config.cfg
+++ b/evalDisp/sample/config.cfg
@@ -1,37 +1,17 @@
 cameras =(  
             {
-                cameraName="GoProBig_ADCensus";
-                extrinsicFile="../sample/data/goProBig/goProBig_extrinsic.yml";
-				imagesXML="../sample/data/goProBig/images.xml";
-                dispsXML="../sample/data/goProBig/ADCensus/disps.xml";
+                cameraName="Sample_Camera_1";
+                extrinsicFile="./data/camera1/camera1_extrinsic.yml";
+                imagesXML="./data/camera1/camera1_images.xml";
+                dispsXML="./data/camera1/camera1_disps.xml";
+                scaleFactor=1;
+            },
+            {
+                cameraName="Sample_Camera_2";
+                extrinsicFile="./data/camera2/camera2_extrinsic.yml";
+                imagesXML="./data/camera2/camera2_images.xml";
+                dispsXML="./data/camera2/camera2_disps.xml";
                 scaleFactor=0.5;
             },
-            {
-                cameraName="GoProBig_BM";
-                extrinsicFile="../sample/data/goProBig/goProBig_extrinsic.yml";
-				imagesXML="../sample/data/goProBig/images.xml";
-                dispsXML="../sample/data/goProBig/BM/disps.xml";
-                scaleFactor=0.5;
-            },
-            {
-                cameraName="GoProBig_SGBM";
-                extrinsicFile="../sample/data/goProBig/goProBig_extrinsic.yml";
-				imagesXML="../sample/data/goProBig/images.xml";
-                dispsXML="../sample/data/goProBig/SGBM/disps.xml";
-                scaleFactor=0.5;
-            },
-            {
-                cameraName="Logitech";
-                extrinsicFile="../sample/data/logitech/logitech_extrinsic.yml";
-				imagesXML="../sample/data/logitech/images.xml";
-                dispsXML="../sample/data/logitech/disps.xml";
-                scaleFactor=1.0;
-            },
-            {
-                cameraName="GoProSmall";
-                extrinsicFile="../sample/data/goProSmall/goProSmall_extrinsic.yml";
-				imagesXML="../sample/data/goProSmall/images.xml";
-                dispsXML="../sample/data/goProSmall/disps.xml";
-                scaleFactor=1.0;
-            }
-         );
+			..and so on...
+    }
